# EchoHarvester

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  agent.md  config.yaml  pyproject.toml  requirements.txt
.claude/skills/status/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
docs/: training.md
echoharvester/: __init__.py  config.py  db.py  main.py
echoharvester/api/: app.py
echoharvester/api/routes/: __init__.py  dashboard.py  pipeline.py  sources.py  training.py  websocket.py
echoharvester/pipeline/: __init__.py  orchestrator.py
echoharvester/sources/: __init__.py  base.py  local_directory.py  local_file.py  youtube.py
echoharvester/stages/: __init__.py  base.py  stage1_metadata.py  stage2_download.py  stage3_preprocess.py  stage4_validate.py  stage5_export.py
echoharvester/training/: __init__.py  config.py  data_prep.py  dataset.py  decode.py  export.py  model.py  tokenizer.py  trainer.py  utils.py
echoharvester/training/zipformer/: LICENSE  __init__.py  scaling.py  subsampling.py  zipformer.py
echoharvester/utils/: __init__.py  audio_utils.py  cer.py  forced_alignment.py  retry.py  subtitle_parser.py  text_normalize.py  vad.py
echoharvester/web/templates/: base.html  dashboard.html  explore.html  home.html  pipeline.html  process.html  review.html  sources.html  training.html  transcribe.html
echoharvester/web/templates/_archive/: dashboard.html  explore.html  sources.html
tests/: conftest.py  test_audio_utils.py  test_cer.py  test_config.py  test_db.py  test_forced_alignment.py  test_pipeline.py  test_retry.py  test_sources.py  test_stages.py  test_subtitle_parser.py  test_text_normalize.py
